--- a/accuweb_ad1/assets/css/demo.css
+++ b/accuweb_ad1/assets/css/demo.css
@@ -1,3 +1,8 @@
+#pageChart, #deviceChart {
+    width: 400px !important;
+    height: 400px !important;
+    margin: auto;
+}
 .update-pro{
 	margin: 15px 25px;}
 
